<resources>
    <string name="app_name">LoveShopping</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_scanner">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="mainmenu_home">首页</string>
    <string name="mainmenu_order">闪送超市</string>
    <string name="mainmenu_cart">购物车</string>
    <string name="mainmenu_my">我的</string>
    <string name="label_settings_about">关于</string>
    <string name="label_settings_help">帮助</string>
    <string name="label_settings_rate_score">给我们打分</string>
    <string name="label_settings_check_update">检查更新</string>
    <string name="label_settings_invite">推荐人</string>
    <string name="label_settings_clear_cache">清除缓存</string>
    <string name="label_settings_telephone">手机号</string>
    <string name="label_settings_name">姓名</string>
    <string name="label_settings_appellation">称谓</string>
    <string name="label_settings_logout">退出登录</string>
    <string name="label_address_manager">地址管理</string>
    <string name="label_my_orders">我的订单</string>
    <string name="label_carpons">代金券</string>
    <string name="label_message_center">消息中心</string>
    <string name="label_customer_center">客服中心</string>
    <string name="label_share_to_friend">分享给朋友</string>
    <string name="label_scan_carpon">扫描代金券</string>
    <string name="label_app_descriptioin">软件介绍</string>
    <string name="label_user_license">用户协议</string>
    <string name="label_user_wechat">微信</string>
    <string name="label_user_wechat_circle">微信朋友圈</string>
    <string name="label_balance">余额</string>
    <string name="label_collection">我的收藏</string>
    <string name="label_points">会员积分</string>
    <string name="label_pending_payment">待付款</string>
    <string name="label_pending_receipt">待收货</string>
    <string name="label_pending_evaluation">待评价</string>
    <string name="label_settings_notification">开启通知</string>
    <string name="label_settings_location">开启位置服务</string>
    <string name="label_settings_clearcache">清除缓存</string>
    <string name="label_settings_clearcache_description">包括图片数据等</string>
    <string name="label_settings_user_profile">个人资料</string>
    <string name="label_settings_account">账户安全</string>
    <string name="label_settings_general">通用</string>
    <string name="label_settings_customer_center">客服中心</string>
    <string name="label_settings_nickname">昵称</string>
    <string name="label_settings_sex">性别</string>
    <string name="label_me_orders">订单</string>
    <string name="label_me_orders_description">查看全部已购商品与服务</string>
    <string name="label_me_cart">购物车</string>
    <string name="label_me_cart_description">%s件商品</string>
    <string name="label_me_packages">套餐</string>
    <string name="label_me_packages_description_def"></string>
    <string name="label_me_packages_description">%s件商品</string>
    <string name="label_me_wallet">钱包</string>
    <string name="label_me_wallet_description">账单与充值</string>
    <string name="label_me_carkpack">卡包</string>
    <string name="label_me_carkpack_description">优惠券、红包、会员卡</string>
    <string name="label_me_red_envelope">红包</string>
    <string name="label_me_red_envelope_description_def">您还没有红包</string>
    <string name="label_me_red_envelope_description">%s个红包</string>
    <string name="label_me_coupon">优惠券</string>
    <string name="label_me_coupon_description_def">您还没有优惠券</string>
    <string name="label_me_coupon_description">您有%s张优惠券</string>
    <string name="label_me_membership_card">会员卡</string>
    <string name="label_me_membership_card_description_def">您还没有会员卡</string>
    <string name="label_me_membership_card_description">%s张会员卡</string>
    <string name="label_me_parcel">包裹</string>
    <string name="label_me_parcel_description">待取包裹</string>
    <string name="label_me_task">任务</string>
    <string name="label_me_task_description">领取的任务</string>
    <string name="label_me_mfhpartner">满分小伙伴</string>
    <string name="label_me_mfhpartner_description">马上加入</string>
    <string name="label_me_branches">默认收货网点</string>
    <string name="label_me_village">常住小区</string>
    <string name="label_me_feedback">反馈</string>
    <string name="label_login_new_user">"我是新用户，<font color='#ff2d77ff'>马上点击注册"</font></string>
    <string name="label_account_name">账户</string>
    <string name="label_account_change_login_pwd">修改登录密码</string>
    <string name="label_account_change_pay_pwd">修改支付密码</string>
    <string name="label_account_change_pay_pwd_description">6位数字,默认为手机号后6位</string>
    <string name="dialog_set_sex">修改性别</string>
    <string name="dialog_item_male">男</string>
    <string name="dialog_item_female">女</string>
    <string name="dialog_button_stock_out">出库</string>
    <string name="hint_edit_invite">请填写推荐人编号</string>
    <string name="hint_input_login_username">用户名：注册手机号</string>
    <string name="hint_input_login_password">密码：默认手机后6位</string>
    <string name="hint_query_category">寻找你喜欢的宝贝、店铺</string>
    <string name="hint_edit_old_pwd">请输入原始密码</string>
    <string name="hint_edit_new_pwd">请输入新密码（至少6位）</string>
    <string name="hint_edit_new_pwd_confirm">新密码确认</string>
    <string name="hint_edit_old_paypwd">请输入原始密码</string>
    <string name="hint_edit_new_paypwd">请输入6位新密码</string>
    <string name="hint_edit_new_paypwd_confirm">新密码确认</string>
    <string name="hint_edit_nickname">请输入新昵称</string>
    <string name="toast_oldpwd_empty">旧密码不能为空</string>
    <string name="toast_newpwd_empty">新密码不能为空</string>
    <string name="toast_confirmpwd_empty">确认新密码不能为空</string>
    <string name="toast_newpwd_conflict">两次输入密码不一致</string>
    <string name="toast_newpwd_short">请输入6位新密码</string>
    <string name="toast_nickname_empty">昵称不能为空</string>
    <string name="toast_nickname_conflict">新的昵称不能和之前的相同</string>
    <string name="toast_change_paypwd_succeess">修改支付密码成功</string>
    <string name="toast_change_loginpwd_success">修改登录密码成功</string>
    <string name="toast_change_nickname_success">修改昵称成功</string>
    <string name="toast_change_sex_success">修改性别成功</string>
    <string name="toast_change_header_success">修改头像成功</string>
    <string name="toast_login_telephone_empty">请输入手机号</string>
    <string name="toast_login_pwd_empty">请输入登录密码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>